<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivOwnerAvatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/tvRepositoryName"
            style="@style/TextView.RepositoryInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/format_repository_name"
            app:layout_constraintBottom_toTopOf="@id/rbRepositoryStars"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivOwnerAvatar" />

        <TextView
            android:id="@+id/tvRepositoryRating"
            style="@style/TextView.RepositoryInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/repository_rating"
            app:layout_constraintBottom_toBottomOf="@id/rbRepositoryStars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rbRepositoryStars" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rbRepositoryStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:isIndicator="true"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toEndOf="@id/tvRepositoryRating"
            app:layout_constraintTop_toBottomOf="@id/tvRepositoryName" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/TextView.RepositoryInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/format_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rbRepositoryStars" />

        <TextView
            android:id="@+id/tvRepositoryUrl"
            style="@style/TextView.RepositoryInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/format_repository_url"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />

        <TextView
            android:id="@+id/tvRepositoryStars"
            style="@style/TextView.RepositoryInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/format_stars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRepositoryUrl" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>